--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
     background-color: black;
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+
 
 }
+
+
 
 ul {
     list-style-type: none;
